hphp/hack/test/typecheck/case_type/recursive/subtyping_simple0.php.exp
ERROR: File "subtyping_simple0.php", line 12, characters 17-18:
Invalid argument (Typing[4110])
  File "subtyping_simple0.php", line 7, characters 24-29:
  Expected `string`
  File "subtyping_simple0.php", line 4, characters 16-16:
  But got `mixed`. Using `mixed` instead of A because this is an illegal recursive use of A in the definition of A
ERROR: File "subtyping_simple0.php", line 13, characters 14-15:
Invalid argument (Typing[4110])
  File "subtyping_simple0.php", line 8, characters 21-23:
  Expected `int`
  File "subtyping_simple0.php", line 4, characters 16-16:
  But got `mixed`. Using `mixed` instead of A because this is an illegal recursive use of A in the definition of A
ERROR: File "subtyping_simple0.php", line 14, characters 12-13:
Invalid argument (Typing[4110])
  File "subtyping_simple0.php", line 6, characters 19-19:
  Expected `A`
  File "subtyping_simple0.php", line 10, characters 28-33:
  But got `string`
